--- a/style.css
+++ b/style.css
@@ -5,3 +5,18 @@
   font-size: 9px;
   margin-bottom: 10px;
 }
+.box1{
+  background-color: red;
+  height: 200px;
+  width: 200px;
+  font-size: 9px;
+  margin-bottom: 10px;
+}
+
+.box2 {
+  background-color: red;
+  height: 200px;
+  width: 200px;
+  font-size: 9px;
+  margin-bottom: 10px;
+}
