--- a/style.css
+++ b/style.css
@@ -6,17 +6,17 @@
   margin-bottom: 10px;
 }
 .box1{
-  background-color: red;
-  height: 200px;
-  width: 200px;
+  background-color: blue;
+height: 100px;
+  width: 100px;
   font-size: 9px;
   margin-bottom: 10px;
 }
 
 .box2 {
-  background-color: red;
-  height: 200px;
-  width: 200px;
+  background-color: yellow;
+  height: 150px;
+  width: 150px;
   font-size: 9px;
   margin-bottom: 10px;
 }
