--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
   background-color: red;
   height: 200px;
   width: 200px;
-  font-size: 9px;
+  position: relative;
+  left: 10px;
   margin-bottom: 10px;
 }
 .box1{
