--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   background-color: blue;
 height: 100px;
   width: 100px;
-  font-size: 9px;
+  right: 100px;
   margin-bottom: 10px;
 }
 
@@ -18,6 +18,6 @@ height: 100px;
   background-color: yellow;
   height: 150px;
   width: 150px;
-  font-size: 9px;
+  right: 100px;
   margin-bottom: 10px;
 }
