--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   background-color: blue;
 height: 100px;
   width: 100px;
+position: relative;
   right: 100px;
   margin-bottom: 10px;
 }
@@ -18,6 +19,7 @@ height: 100px;
   background-color: yellow;
   height: 150px;
   width: 150px;
+position: relative;
   right: 100px;
   margin-bottom: 10px;
 }
