--- a/style5.css
+++ b/style5.css
@@ -3,6 +3,7 @@
   height: 200px;
   width: 200px;
   position: relative;
+left:200px;
   margin-bottom: 10px;
 }
 .box1{
@@ -10,6 +11,7 @@
 height: 100px;
   width: 100px;
 position: relative;
+top:200px;
   margin-bottom: 10px;
 }
 
@@ -18,5 +20,6 @@ position: relative;
   height: 150px;
   width: 150px;
 position: relative;
+left: 500px;
   margin-bottom: 10px;
 }
