--- a/style4.css
+++ b/style4.css
@@ -3,6 +3,7 @@
   height: 200px;
   width: 200px;
   position: relative;
+  top: 10px;
   margin-bottom: 10px;
 }
 .box1{
@@ -10,6 +11,9 @@
 height: 100px;
   width: 100px;
 position: relative;
+  bottom: 50px;
+  left: 140px;
+  z-index: -1;
   margin-bottom: 10px;
 }
 
@@ -18,6 +22,7 @@ position: relative;
   height: 150px;
   width: 150px;
 position: relative;
+  bottom: 30px;
   margin-bottom: 10px;
 }
 
