--- a/style3.css
+++ b/style3.css
@@ -3,6 +3,8 @@
   height: 200px;
   width: 200px;
   position: relative;
+  left: 350px;
+  top: 260px;
   margin-bottom: 10px;
 }
 .box1{
@@ -10,6 +12,8 @@
 height: 100px;
   width: 100px;
 position: relative;
+  left: 200px;
+  bottom: 90px;
   margin-bottom: 10px;
 }
 
@@ -18,5 +22,8 @@ position: relative;
   height: 150px;
   width: 150px;
 position: relative;
+  left: 300px;
+  bottom: 100px;
+  z-index:-1;
   margin-bottom: 10px;
 }
